# reflection

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conan_build.sh  conanfile.txt
.claude/: CLAUDE.md  INSTRUCTIONS.md  SKILLS.md
.claude/modules/: argparse.md  reflect.md  yaml.md
include/: CMakeLists.txt  concepts.hpp  preprocessor.hpp  reflect.hpp  utility.hpp
include/argparse/: argparse.hpp  concepts.hpp  convertors.hpp
include/json/: concepts.hpp  convert.hpp  parser.hpp
include/json/internal/: from_json.hpp  to_json.hpp
include/reflect/: concepts.hpp  enum.hpp  preprocessor.hpp  reflect.hpp  typelist.hpp  utility.hpp
include/yaml/: concepts.hpp  convert.hpp  parser.hpp
tests/: CMakeLists.txt  reflection_mocks.hpp  test_argparse.cpp  test_json_serialization.cpp  test_reflection.cpp  test_reflection_core.cpp  test_reflection_extended.cpp  test_with_yaml.cpp  test_yaml_conversion.cpp
